force-app/main/default/objects/DTSQuestion__c/DTSQuestion__c.object-meta.xml
<CustomObject>
    <label>DTS Question</label>
    <nameField>
        <displayFormat>DTS - {000}</displayFormat>
        <label>DTS Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTS Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>