force-app/main/default/objects/DTSQuestion__c/fields/ClosingSectionTitle__c.field-meta.xml
<CustomField>
    <fullName>ClosingSectionTitle__c</fullName>
    <label>Closing Section Title</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>