force-app/main/default/objects/DTSQuestion__c/fields/ClosingSectionVerbage__c.field-meta.xml
<CustomField>
    <fullName>ClosingSectionVerbage__c</fullName>
    <label>Closing Section Verbage</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>