force-app/main/default/objects/DTSQuestion__c/fields/ClusterSection3__c.field-meta.xml
<CustomField>
    <fullName>ClusterSection3__c</fullName>
    <label>Cluster Section 3</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>