force-app/main/default/objects/DTSQuestion__c/fields/Confirmation_No__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_No__c</fullName>
    <label>Confirmation No</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>