force-app/main/default/objects/DTSQuestion__c/fields/ConfirmationYes__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationYes__c</fullName>
    <label>Confirmation Yes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>