force-app/main/default/objects/DTSQuestion__c/fields/ConfirmEmailSectionPostScript__c.field-meta.xml
<CustomField>
    <fullName>ConfirmEmailSectionPostScript__c</fullName>
    <label>Confirm Email Section PostScript</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>