force-app/main/default/objects/DTSQuestion__c/fields/ConfirmEmailSectionPreScript__c.field-meta.xml
<CustomField>
    <fullName>ConfirmEmailSectionPreScript__c</fullName>
    <label>Confirm Email Section PreScript</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>