force-app/main/default/objects/DTSQuestion__c/fields/ConfirmEmailSectionTitle__c.field-meta.xml
<CustomField>
    <fullName>ConfirmEmailSectionTitle__c</fullName>
    <label>Confirm Email Section Title</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>