force-app/main/default/objects/DTSQuestion__c/fields/DTSQuestion_Type__c.field-meta.xml
<CustomField>
    <fullName>DTSQuestion_Type__c</fullName>
    <label>DTS Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>