force-app/main/default/objects/DTSQuestion__c/fields/GiftBoxConfirmationQuestion__c.field-meta.xml
<CustomField>
    <fullName>GiftBoxConfirmationQuestion__c</fullName>
    <label>Gift Box Confirmation Question</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>