force-app/main/default/objects/DTSQuestion__c/fields/InboundPostScript__c.field-meta.xml
<CustomField>
    <fullName>InboundPostScript__c</fullName>
    <label>Inbound PostScript</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>