force-app/main/default/objects/DTSQuestion__c/fields/InboundPreScript__c.field-meta.xml
<CustomField>
    <fullName>InboundPreScript__c</fullName>
    <label>Inbound PreScript</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>