force-app/main/default/objects/DTSQuestion__c/fields/InboundScriptTitle__c.field-meta.xml
<CustomField>
    <fullName>InboundScriptTitle__c</fullName>
    <label>Inbound Script Title</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>