force-app/main/default/objects/DTSQuestion__c/fields/OrderOutbound__c.field-meta.xml
<CustomField>
    <fullName>OrderOutbound__c</fullName>
    <label>Order(Outbound)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>