force-app/main/default/objects/DTSQuestion__c/fields/OutboundAgentPostScript__c.field-meta.xml
<CustomField>
    <fullName>OutboundAgentPostScript__c</fullName>
    <label>Outbound Agent Post Script</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>