force-app/main/default/objects/DTSQuestion__c/fields/OutboundAgentSection1__c.field-meta.xml
<CustomField>
    <fullName>OutboundAgentSection1__c</fullName>
    <label>Outbound Agent Section 1</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>