force-app/main/default/objects/DTSQuestion__c/fields/PopupCluster__c.field-meta.xml
<CustomField>
    <fullName>PopupCluster__c</fullName>
    <label>Cluster Section 1</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>