force-app/main/default/objects/DTSQuestion__c/fields/PopupHelperClass__c.field-meta.xml
<CustomField>
    <fullName>PopupHelperClass__c</fullName>
    <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
Industry__c,
&apos;(&apos;, &apos;&apos;),
&apos;)&apos;, &apos;&apos; ),
&apos;/&apos;, &apos;&apos; ),
&apos;&amp;&apos;, &apos;&apos; ),
&apos;,&apos;, &apos;&apos; ),
&apos; &apos;, &apos;&apos; )</formula>
    <label>Popup Helper Class</label>
    <type>Text</type>
</CustomField>