force-app/main/default/objects/DTSQuestion__c/fields/Question_Pretext__c.field-meta.xml
<CustomField>
    <fullName>Question_Pretext__c</fullName>
    <label>Question Pretext</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>