force-app/main/default/objects/DTSQuestion__c/fields/QuestionOutbound__c.field-meta.xml
<CustomField>
    <fullName>QuestionOutbound__c</fullName>
    <label>Question(Outbound)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>