force-app/main/default/objects/DTSQuestion__c/fields/SearsTransferTitle__c.field-meta.xml
<CustomField>
    <fullName>SearsTransferTitle__c</fullName>
    <label>Sears Transfer Title</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>