force-app/main/default/objects/DTSQuestion__c/fields/SearsTransferVerbage__c.field-meta.xml
<CustomField>
    <fullName>SearsTransferVerbage__c</fullName>
    <label>Sears Transfer Verbage</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>