force-app/main/default/objects/DTSQuestion__c/fields/Section1_PreScript__c.field-meta.xml
<CustomField>
    <fullName>Section1_PreScript__c</fullName>
    <label>Section 1 PreScript</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>