force-app/main/default/objects/DTSQuestion__c/fields/Section1PostScript__c.field-meta.xml
<CustomField>
    <fullName>Section1PostScript__c</fullName>
    <label>Section 1 PostScript</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>