force-app/main/default/objects/DTSQuestion__c/fields/Section1Title__c.field-meta.xml
<CustomField>
    <fullName>Section1Title__c</fullName>
    <label>Section 1 Title</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>