force-app/main/default/objects/DTSQuestion__c/fields/Section2_PostScript__c.field-meta.xml
<CustomField>
    <fullName>Section2_PostScript__c</fullName>
    <label>Section 2 PostScript</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>