force-app/main/default/objects/DTSQuestion__c/fields/Section2_PreScript__c.field-meta.xml
<CustomField>
    <fullName>Section2_PreScript__c</fullName>
    <label>Section 2 PreScript</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>