force-app/main/default/objects/DTSQuestion__c/fields/Section2_Title__c.field-meta.xml
<CustomField>
    <fullName>Section2_Title__c</fullName>
    <label>Section 2 Title</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>