force-app/main/default/objects/DTSQuestion__c/fields/Section3_PostScript__c.field-meta.xml
<CustomField>
    <fullName>Section3_PostScript__c</fullName>
    <label>Section 3 PostScript</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>