force-app/main/default/objects/DTSQuestion__c/fields/Section3_PreScript__c.field-meta.xml
<CustomField>
    <fullName>Section3_PreScript__c</fullName>
    <label>Section 3 PreScript</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>