force-app/main/default/objects/DTSQuestion__c/fields/Section3_Title__c.field-meta.xml
<CustomField>
    <fullName>Section3_Title__c</fullName>
    <label>Section 3 Title</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>