force-app/main/default/objects/DTSQuestion__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section 1</fullName>
            </value>
            <value>
                <fullName>Section 2</fullName>
            </value>
            <value>
                <fullName>Section 3</fullName>
            </value>
            <value>
                <fullName>Section 4</fullName>
            </value>
            <value>
                <fullName>Section 5</fullName>
            </value>
            <value>
                <fullName>Confirm Email</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Additional Interest Questions</fullName>
            </value>
            <value>
                <fullName>Form Lead up</fullName>
            </value>
            <value>
                <fullName>Form Lead up with Popups</fullName>
            </value>
            <value>
                <fullName>Form Lead up with Popups 2</fullName>
            </value>
            <value>
                <fullName>Inbound TM Script</fullName>
            </value>
            <value>
                <fullName>Yes only section 1</fullName>
            </value>
            <value>
                <fullName>Yes only section 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>