force-app/main/default/objects/DTSQuestion__c/fields/Verbiage_Type__c.field-meta.xml
<CustomField>
    <fullName>Verbiage_Type__c</fullName>
    <label>Verbiage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>