force-app/main/default/objects/DTSQuestion__c/recordTypes/Additional_Interest_Questions.recordType-meta.xml
<RecordType>
    <fullName>Additional_Interest_Questions</fullName>
    <active>true</active>
    <label>Additional Interest Questions</label>
</RecordType>