force-app/main/default/objects/DTSQuestion__c/recordTypes/DTS_Questions.recordType-meta.xml
<RecordType>
    <fullName>DTS_Questions</fullName>
    <active>true</active>
    <label>DTS Questions</label>
</RecordType>