force-app/main/default/objects/DTSQuestion__c/recordTypes/Verbiage.recordType-meta.xml
<RecordType>
    <fullName>Verbiage</fullName>
    <active>true</active>
    <label>Verbiage</label>
</RecordType>